docs: Remove outdated production and quick reference guides
- Deleted `PRODUCTION.md` and `quick-reference.md` as they were redundant and outdated.
- Simplified documentation by centralizing relevant content in updated and maintained guides.
- Ensured all critical details are retained in `README.md` and `FEATURES.md`.